# NOU

./: .gitignore  DESIGN.md  README.md
.github/workflows/: release-cross-platform.yml
NOU.app-src/: Package.swift  build-app.sh
NOU.app-src/Sources/App/: AppDelegate.swift  DashboardViewModel.swift  NOUDashboardView.swift  QuickAIPanel.swift  StatusPopover.swift  WelcomeWindowController.swift
NOU.app-src/Sources/Client/: NOUAPIClient.swift
NOU.app-src/Sources/Dashboard/: DashboardHTML.swift
NOU.app-src/Sources/Discovery/: NOUBrowser.swift  NOUPublisher.swift
NOU.app-src/Sources/MLX/: ModelConfig.swift
NOU.app-src/Sources/Menubar/: MenubarController.swift
NOU.app-src/Sources/Plugins/: CodeExecutionPlugin.swift  ImageGenPlugin.swift  PluginHandler.swift  PluginManager.swift  WebSearchPlugin.swift
NOU.app-src/Sources/Server/: AnthropicSSE.swift  AuthCheck.swift  BlackboardHandler.swift  BlackboardStore.swift  DashboardHandler.swift  DistributedInference.swift  HealthHandler.swift  KeychainHelper.swift  MetricsHandler.swift  ModelTransferHandler.swift  ModelsHandler.swift  NOURequestContext.swift  NodesHandler.swift  PACHandler.swift  PairingHandler.swift  PairingManager.swift  ProxyHandler.swift  ProxyServer.swift  RPCHandler.swift  RelayClient.swift  RelayStatusHandler.swift  RemoteIPMiddleware.swift  RewardHandler.swift  RewardLedger.swift  RuntimeBenchmark.swift  (+6 more)
nou-relay/: Cargo.toml  Dockerfile  fly.toml
nou-relay/src/: main.rs
nou-server/: Cargo.toml  installer.iss
nou-server/src/: main.rs
site/: depin.html  distributed.html  docs.html  fly.toml  index.html  ja.html  start.html  style.css  token.html
(+1 files in other folders)
