[package]
name = "nou-relay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nou-relay"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
futures = "0.3"
tokio-tungstenite = "0.24"
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
