[package]
name = "nou-server"
version = "0.1.0"
edition = "2021"
description = "NOU local AI server — cross-platform OpenAI-compatible proxy"

[[bin]]
name = "nou-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors"] }
bytes = "1"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
colored = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
